[package]
name = "rubik"
version = "0.1.0"
authors = ["sgalasso"]
edition = "2018"

[lib]
name = "rubik"
path = "src/rubik/lib.rs"

[[bin]]
name = "solve"
path = "src/solve/main.rs"

[[bin]]
name = "server"
path = "src/server/main.rs"

[dependencies]
rand = "0.7.3"
clap = "2.33.3"
kiss3d = "0.29.0"
nalgebra = "0.24.0"
pbr = "1.0.4"
actix-cors = "0.5.4"
actix-http = "2.2.0"
actix-rt = "1.1.1"
actix-service = "1.0.6"
actix-web = { version = "3.3.2", features = ["rustls"] }
serde = { version = "1.0.118", features = ["derive"] }
serde_json = { version = "1.0.61", features = ["preserve_order"] }